--- a/.github/workflows/Collect.yaml
+++ b/.github/workflows/Collect.yaml
@@ -14,11 +14,11 @@ on:
 
 defaults:
   run:
-    shell: PowerShell
+    shell: pwsh
 
 jobs:
   Collect:
-    runs-on: [ windows-latest ]
+    runs-on: [ ubuntu-latest ]
     steps:
       - uses: actions/checkout@v3
 
