--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -170,6 +170,7 @@ jobs:
   Scenario:
     runs-on: [ ubuntu-latest ]
     needs: [ Check, SetupRepositories, Analyze ]
+    if: github.event.inputs.runScenarios == 'Y'
     strategy: ${{ fromJson(needs.Analyze.outputs.scenarios) }}
     steps:
       - uses: actions/checkout@v3
@@ -203,6 +204,7 @@ jobs:
   TestAlGo:
     runs-on: [ ubuntu-latest ]
     needs: [ Check, SetupRepositories, Analyze ]
+    if: github.event.inputs.runTestMatrix == 'Y'
     strategy: ${{ fromJson(needs.Analyze.outputs.testruns) }}
     steps:
       - uses: actions/checkout@v3
@@ -251,6 +253,7 @@ jobs:
   TestAlGoUpgrade:
     runs-on: [ ubuntu-latest ]
     needs: [ Check, SetupRepositories, Analyze ]
+    if: github.event.inputs.runUpgradeTests == 'Y'
     strategy: ${{ fromJson(needs.Analyze.outputs.releases) }}
     steps:
       - uses: actions/checkout@v3
@@ -297,7 +300,7 @@ jobs:
   RemoveRepositories:
     runs-on: [ ubuntu-latest ]
     needs: [ Check, SetupRepositories, TestAlGo, TestAlGoUpgrade, Scenario ]
-    if: always() && (${{ needs.SetupRepositories.result == 'Success' }})
+    if: always() && (${{ needs.SetupRepositories.result == 'Success' }}) && (${{ needs.TestAlGo.result == 'Success' }} || ${{ needs.TestAlGo.result == 'Skipped' }}) && (${{ needs.TestAlGoUpgrade.result == 'Success' }} || ${{ needs.TestAlGoUpgrade.result == 'Skipped' }}) && (${{ needs.Scenario.result == 'Success' }} || ${{ needs.Scenario.result == 'Skipped' }})
     steps:
       - uses: actions/checkout@v3
         with:
