--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -300,7 +300,7 @@ jobs:
   RemoveRepositories:
     runs-on: [ ubuntu-latest ]
     needs: [ Check, SetupRepositories, TestAlGo, TestAlGoUpgrade, Scenario ]
-    if: always() && (${{ needs.SetupRepositories.result == 'Success' }}) && (${{ needs.TestAlGo.result == 'Success' }} || ${{ needs.TestAlGo.result == 'Skipped' }}) && (${{ needs.TestAlGoUpgrade.result == 'Success' }} || ${{ needs.TestAlGoUpgrade.result == 'Skipped' }}) && (${{ needs.Scenario.result == 'Success' }} || ${{ needs.Scenario.result == 'Skipped' }})
+    if: always() && (!Cancelled()) && (needs.SetupRepositories.result == 'Success') && (needs.TestAlGo.result == 'Success' || needs.TestAlGo.result == 'Skipped' && (needs.TestAlGoUpgrade.result == 'Success' || needs.TestAlGoUpgrade.result == 'Skipped') && (needs.Scenario.result == 'Success' || needs.Scenario.result == 'Skipped')
     steps:
       - uses: actions/checkout@v3
         with:
